--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -119,6 +119,11 @@ a {
             }
         }
     }
+    &-btn {
+        width: 16px;
+        height: 16px;
+        margin: 0 auto;
+    }
 }
 .counter {
     display: inline-block;
