--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,13 +1,4 @@
-$bg-color: #fff;
-$shadow-color: #E1E1E1;
-$text-color: #505050;
-$link-color: #235594;
-$name-color: #8C223E;
-$title-color: #000;
-$grey-color: #666;
-$dGrey-color: #333;
-$red-color: #BF3029;
-$sRow-color: #F2F2F2;
+@import "vars";
 
 html {
     box-sizing: border-box;
@@ -142,7 +133,7 @@ a {
 .mainArea {
     background-color: $bg-color;
     width: 100%;
-    flex-basis: auto;
+    flex-grow: 1;
 
     display: flex;
     flex-direction: column;
@@ -169,13 +160,187 @@ a {
             }
         }
     }
+    &-board {
+        margin: 32px;
+        height: 140px;
+        min-height: 140px;
+        background-color: $board-bg;
+        border: 1px solid $board-border;
+        border-radius: 4px;
+        &__msgText {
+            color: $board-text;
+            font-size: 14px;
+            margin: 16px 16px 0 16px;
+            width: calc(100% - 32px);
+            height: 58px;
+            resize: none;
+            border: none;
+            background-color: $board-bg;
+            outline: none;
+            &::-webkit-scrollbar { width: 3px; height: 3px;}
+            &::-webkit-scrollbar-button { display: none; background-color: $grey-color; }
+            &::-webkit-scrollbar-track-piece { background-color: $board-icons; }
+            &::-webkit-scrollbar-thumb { height: 10px; background-color: $grey-color; border-radius: 2px;}
+        }
+        &__panel {
+            margin: 8px;
+            height: 42px;
+            display: flex;
+            justify-content: space-between;
+            &-icons {
+                height: 42px;
+                display: flex;
+                align-items: center;
+                padding-left: 8px;
+                &-icon {
+                    width: 24px;
+                    height: 24px;
+                    margin: 0 4px;
+                }
+                &-div {
+                    background-color: $board-split;
+                    width: 2px;
+                    height: 42px;
+                    margin: 0 8px;
+                }
+            }
+        }
+    }
+}
+
+.msgArea {
+    padding: 32px;
+    height: calc(100vh - 305px);
+    margin-bottom: 32px;
+    &-messages {
+        height: calc(100vh - 305px);
+        overflow: hidden;
+        overflow-y: scroll;
+        &::-webkit-scrollbar { width: 3px; height: 3px;}
+        &::-webkit-scrollbar-button { display: none; background-color: $grey-color; }
+        &::-webkit-scrollbar-track-piece { background-color: $bg-color;}
+        &::-webkit-scrollbar-thumb { height: 10px; background-color: $grey-color; border-radius: 2px;}
+
+        &__msg {
+            display: flex;
+            &-ava {
+                position: relative;
+                &::after {
+                    position: absolute;
+                    content: '';
+                    background-color: $shadow-color;
+                    width: 1px;
+                    height: calc(100% - 42px);
+                    left: 17px;
+                    bottom: 4px;
+                }
+            }
+            &-block {
+                margin-left: 22px;
+            }
+            &-caption {
+                font-weight: 500;
+                line-height: 18px;
+                color: $name-color;
+                &>span {
+                    margin-left: 12px;
+                    margin-top: 2px;
+                    font-size: 11px;
+                    line-height: 14px;
+                    color: rgba($board-text, 0.5);
+                }
+            }
+            &-text {
+                margin-top: 8px;
+                margin-bottom: 32px;
+                &>pre {
+                    font-family: $code-font;
+                    color: $link-color;
+                }
+            }
+            &-date {
+                display: flex;
+                &-div {
+                    position: relative;
+                    &::after {
+                        position: absolute;
+                        content: '';
+                        background-color: $shadow-color;
+                        width: 1px;
+                        height: 100%;
+                        left: 17px;
+                        bottom: 4px;
+                    }
+                }
+                &-text {
+                    font-weight: 500;
+                    font-size: 11px;
+                    line-height: 14px;
+                    text-align: center;
+                    text-transform: uppercase;
+                    width: 100%;
+                    margin-bottom: 32px;
+                }
+            }
+        }
+    }
 }
 
 .aSide {
     background-color: $bg-color;
-    // min-width: 404px;
+    min-width: 404px;
     width: 100%;
     flex-basis: 404px;
+    padding: 24px 32px;
+
+    display: flex;
+    flex-direction: column;
+    &-caption {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: nowrap;
+        margin-bottom: 12px;
+        &__btn {
+            margin-left: 16px;
+            margin-top: 4px;
+        }
+    }
+    &-author {
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        margin-bottom: 32px;
+        &__name {
+            margin-left: 8px;
+            line-height: 18px;
+            color: $name-color;
+            flex-grow: 1;
+        }
+        &__date {
+            font-size: 11px;
+            line-height: 14px;
+            text-align: right;
+            color: rgba($board-text, 0.5);
+        }
+    }
+    &-area {
+        width: 344px;
+        height: calc(100vh - 170px);
+        overflow: hidden;
+        overflow-y: scroll;
+        &::-webkit-scrollbar { width: 3px; height: 3px;}
+        &::-webkit-scrollbar-button { display: none; background-color: $grey-color; }
+        &::-webkit-scrollbar-track-piece { background-color: $bg-color;}
+        &::-webkit-scrollbar-thumb { height: 10px; background-color: $grey-color; border-radius: 2px;}
+    }
+    &-image {
+        width: 340px;
+        border-radius: 4px;
+        margin-bottom: 27px;
+    }
+    &-text {
+        width: 340px;
+    }
 }
 
 .shadowW {
@@ -185,7 +350,11 @@ a {
 .avatar {
     border: 1px solid rgba(#32302E, 0.2);
     border-radius: 50%;
-    &-32 { width: 32px; height: 32px; }
+    &-32 { width: 34px; height: 34px; }
+    &-32nb {
+        width: 32px; height: 32px;
+        border-radius: 50%;
+    }
     &-member {
         border: 2px solid $bg-color;
         border-radius: 50%;
