First and second screen - complate

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -8,6 +8,7 @@ $grey-color: #666;
 $dGrey-color: #333;
 $red-color: #BF3029;
 $sRow-color: #F2F2F2;
+$accept-color: #34747E;
 
 $board-text: #65605C;
 $board-bg: #F2F2F2;
