--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -30,6 +30,22 @@ a {
     font-weight: 700;
     color: $link-color;
 }
+.link-file {
+    display: inline-block;
+    padding: 2px 10px 2px 28px;
+    position: relative;
+    &::before {
+        position: absolute;
+        content: '';
+        background-image: url(../images/ico-clip.svg);
+        background-repeat: no-repeat;
+        opacity: .4;
+        top: 0;
+        left: 0;
+        width: 24px;
+        height: 24px;
+    }
+}
 .title {
     color: $title-color;
     font-weight: 500;
@@ -93,6 +109,9 @@ a {
             margin-top: 2px;
             margin-right: 8px;
         }
+        &__btn-styleMin {
+            margin: 2px auto;
+        }
     }
     &-list {
         list-style: none;
@@ -120,7 +139,7 @@ a {
             }
         }
     }
-    &-btn-style {
+    &-btn {
         width: 16px;
         height: 16px;
         margin: 0 auto;
@@ -252,12 +271,23 @@ a {
                 font-weight: 500;
                 line-height: 18px;
                 color: $name-color;
-                &>span {
+                &>span.msgDate {
                     margin-left: 12px;
                     margin-top: 2px;
                     font-size: 11px;
                     line-height: 14px;
                     color: rgba($board-text, 0.5);
+                }
+                &>span.msgAction {
+                    margin-left: 5px;
+                    line-height: 20px;
+                    color: rgba(#000, 0.4);
+                }
+                &>span.msgPlace {
+                    margin-left: 5px;
+                    font-weight: 500;
+                    line-height: 18px;
+                    color: $grey-color;
                 }
             }
             &-text {
@@ -269,27 +299,71 @@ a {
                 }
             }
             &-date {
+                margin-top: 16px;
                 display: flex;
-                &-div {
+                &-number {
                     position: relative;
+                    padding-top: 9px;
+                    padding-left: 9px;
+                    height: 64px;
+                    width: 34px;
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 18px;
+                    color: $title-color;
+                    z-index: 1;
+                    &::before {
+                        position: absolute;
+                        content: '';
+                        background-image: url(../images/icon-date.svg);
+                        background-repeat: no-repeat;
+                        top: 0;
+                        left: 1px;
+                        z-index: -1;
+                        width: 32px;
+                        height: 32px;
+                        border-radius: 4px;
+                    }
                     &::after {
                         position: absolute;
                         content: '';
                         background-color: $shadow-color;
                         width: 1px;
-                        height: 100%;
+                        height: calc(100% + 16px);
                         left: 17px;
                         bottom: 4px;
+                        z-index: -2;
                     }
                 }
                 &-text {
+                    padding-top: 9px;
+                    margin-left: 25px;
                     font-weight: 500;
                     font-size: 11px;
                     line-height: 14px;
-                    text-align: center;
                     text-transform: uppercase;
+                    color: $grey-color;
                     width: 100%;
-                    margin-bottom: 32px;
+                }
+            }
+            &-div {
+                position: relative;
+                padding-bottom: 32px;
+                font-weight: 500;
+                font-size: 11px;
+                line-height: 14px;
+                text-transform: uppercase;
+                color: $grey-color;
+                text-align: center;
+                width: 100%;
+                &::after {
+                    position: absolute;
+                    content: '';
+                    background-color: $shadow-color;
+                    width: 1px;
+                    height: 100%;
+                    left: 17px;
+                    bottom: 4px;
                 }
             }
         }
@@ -350,6 +424,81 @@ a {
     }
     &-text {
         width: 340px;
+    }
+    &-meetBox {
+        margin-bottom: 32px;
+        width: 340px;
+        text-align: center;
+        &__date {
+            padding-top: 16px;
+            font-weight: 500;
+            line-height: 18px;
+            color: $grey-color;
+        }
+        &__time {
+            margin-top: 4px;
+            margin-bottom: 16px;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 31px;
+            color: $title-color;
+        }
+        &__buttons {
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 12px;
+        }
+    }
+    &-membersBox {
+        width: 340px;
+        margin-bottom: 16px;
+        display: flex;
+        flex-direction: column;
+        &__item {
+            margin-bottom: 14px;
+            display: flex;
+            &-block {
+                margin-left: 8px;
+            }
+            &-name {
+                font-weight: 500;
+                line-height: 18px;
+                color: $name-color;
+            }
+            &-status {
+                font-weight: 500;
+                font-size: 11px;
+                line-height: 14px;
+                color: $accept-color;
+            }
+        }
+    }
+}
+.aSide-1 {
+    display: none;
+}
+.aSide-2 {
+    display: none;
+}
+
+.msg-colorRed {
+    color: $red-color;
+}
+.btn {
+    width: 164px;
+    height: 32px;
+    font-weight: 500;
+    border: 1px solid $board-border;
+    border-radius: 4px;
+    outline: none;
+    &-accept {
+        border: none;
+        background-color: $dGrey-color;
+        color: $bg-color;
+    }
+    &-cancel {
+        background-color: $board-bg;
+        color: $dGrey-color;
     }
 }
 
